# dnd-currency-manager

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  requirements.txt  start.sh
app/: dependencies.py  main.py
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_05_69db3ef09e66_initial_tables.py  2026_03_05_6ad51bea90cb_add_receiver_to_joint_payments.py  2026_03_05_a1b2c3d4e5f6_add_spend_and_self_add_transaction_types.py  2026_03_07_b1c2d3e4f5a6_add_party_coin_preferences_table.py  2026_03_07_c2d3e4f5a6b7_add_character_balance_visibility.py  2026_03_09_d4e5f6a7b8c9_add_inventory_tables.py  2026_03_22_e6f7a8b9c0d1_add_character_heroic_inspiration.py
backend/app/: main.py
backend/app/api/: auth.py  heroic_inspiration.py  inventory.py  joint_payments.py  parties.py  sse.py  transactions.py  transfers.py  users.py
backend/app/core/: coin_preferences.py  config.py  currency.py  database.py  dependencies.py  events.py  security.py
backend/app/models/: __init__.py  character.py  coin_preference.py  inventory.py  joint_payment.py  party.py  transaction.py  user.py
backend/app/schemas/: auth.py  character.py  heroic_inspiration.py  inventory.py  joint_payment.py  party.py  transaction.py  user.py
backend/tests/: conftest.py  test_auth.py  test_currency.py  test_heroic_inspiration.py  test_inventory.py  test_joint_payments.py  test_network.py  test_parties.py  test_transfers.py
docs/: SSOT.md
frontend/: Dockerfile  (+3 more)
(+61 files in other folders)
