[project]
name = "backend"
version = "0.1.0"
description = "D&D Currency Manager - Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
